translate and add modal

--- a/ContactsPrj/Views/Contacts/Create.cshtml
+++ b/ContactsPrj/Views/Contacts/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model ContactsPrj.Models.Contact
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
 }
 
-<h1>Create</h1>
-
-<h4>Contact</h4>
+<h1>Создать</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
