--- a/ContactsPrj/Views/Shared/_Layout.cshtml
+++ b/ContactsPrj/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - ContactsPrj - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - ContactsPrj
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
